using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationParameter 
{
    public static readonly int ForwardAxisParam = Animator.StringToHash("forward");
    public static readonly int rightAxisParam = Animator.StringToHash("right");
    public static readonly int RotateAxisParam = Animator.StringToHash("rotation");
    public static readonly int invi = Animator.StringToHash("invi");
    
}
